@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Applied code clean up patch for mapsearch.c. Results in some modest
+  performance gains in certain query use cases.
+
 - Fixed labels centering when the label is longer than the line (#2867)
 
 - Ensure Python MapScript building doesn't reorder the libraries, support the 
